<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rename"
        android:textColor="#282828"
        android:textSize="20sp" />

    <com.bazooka.bluetoothbox.ui.view.ClearableEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/bg_underline"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/tv_demand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_rename_demand" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="#069fde" />
    </LinearLayout>

</LinearLayout>