<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:contentDescription="@null"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/BoldTextViewStyle"
            android:layout_gravity="center_vertical"
            android:text="@string/seq_list"
            android:textSize="25sp" />

    </LinearLayout>

    <View
        style="@style/viewLine"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/seq_list_activity_margin_left"
        android:layout_marginRight="@dimen/seq_list_activity_margin_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/seq_list_activity_margin_left"
        android:layout_marginRight="@dimen/seq_list_activity_margin_left"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="right"
            android:text="#"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/upward"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/downward"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_seq_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/seq_list_activity_margin_left"
        android:layout_marginRight="@dimen/seq_list_activity_margin_left"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/ledCustomBottom"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_sync"
            style="@style/WhiteBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_led_save"
            android:ems="4"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sync" />

        <TextView
            android:id="@+id/tv_upgrade"
            style="@style/WhiteBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_led_save"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/upgrade" />

        <TextView
            android:id="@+id/tv_reset"
            style="@style/WhiteBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/bg_led_reset"
            android:ems="4"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/reset" />

    </FrameLayout>

</LinearLayout>